# OsmoFileOrgnizeGUI

./: .gitignore  OsmoFileOrganize.spec  README.md  build.bat  installer.iss  main.py  organizer_core.py  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml  test.yml
tests/: test_core.py
